--- a/machine_learning_linus_larsson_mlops25/video_alongs/04_logistic_regression/logistic_regression.ipynb
+++ b/machine_learning_linus_larsson_mlops25/video_alongs/04_logistic_regression/logistic_regression.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "e3823fe1",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "[10000 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "e4670f57",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "4      No      No   785.655883  38463.495879"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "683300fe",
    "metadata": {},
    "outputs": [
@@ -286,26 +286,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "52842c8a",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>balance</th>\n",
+       "      <th>income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>835.374886</td>\n",
+       "      <td>33516.981876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>483.714985</td>\n",
+       "      <td>13336.639563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>771.967729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>481.731105</td>\n",
+       "      <td>21340.462903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>823.636973</td>\n",
+       "      <td>34552.644802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1166.308386</td>\n",
+       "      <td>43807.729272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2654.322576</td>\n",
+       "      <td>73554.233495</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "balance       income      \n",
-       "0.000000      771.967729      1\n",
-       "481.731105    21340.462903    1\n",
-       "483.714985    13336.639563    1\n",
-       "823.636973    34552.644802    1\n",
-       "835.374886    33516.981876    1\n",
-       "1166.308386   43807.729272    1\n",
-       "2654.322576   73554.233495    1\n",
-       "10000.000000  10000.000000    1\n",
-       "Name: count, dtype: int64"
+       "            balance        income\n",
+       "count  10000.000000  10000.000000\n",
+       "mean     835.374886  33516.981876\n",
+       "std      483.714985  13336.639563\n",
+       "min        0.000000    771.967729\n",
+       "25%      481.731105  21340.462903\n",
+       "50%      823.636973  34552.644802\n",
+       "75%     1166.308386  43807.729272\n",
+       "max     2654.322576  73554.233495"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "75d2b6c5",
    "metadata": {},
    "outputs": [
@@ -329,7 +396,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "668dbf1a",
    "metadata": {},
    "outputs": [
@@ -353,7 +420,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "ac070163",
    "metadata": {},
    "outputs": [
@@ -374,7 +441,7 @@
        "<Axes: xlabel='balance', ylabel='income'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -395,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "92fac966",
    "metadata": {},
    "outputs": [
@@ -427,7 +494,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
+   "id": "6e5f6fe6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['default', 'student', 'balance', 'income'], dtype='object')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "2e3a5711",
    "metadata": {},
    "outputs": [
@@ -454,9 +542,7 @@
        "      <th></th>\n",
        "      <th>balance</th>\n",
        "      <th>income</th>\n",
-       "      <th>default_No</th>\n",
        "      <th>default_Yes</th>\n",
-       "      <th>student_No</th>\n",
        "      <th>student_Yes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -465,17 +551,13 @@
        "      <th>0</th>\n",
        "      <td>729.526495</td>\n",
        "      <td>44361.625074</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>817.180407</td>\n",
        "      <td>12106.134700</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -483,27 +565,21 @@
        "      <th>2</th>\n",
        "      <td>1073.549164</td>\n",
        "      <td>31767.138947</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>529.250605</td>\n",
        "      <td>35704.493935</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>785.655883</td>\n",
        "      <td>38463.495879</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -511,22 +587,185 @@
        "</div>"
       ],
       "text/plain": [
-       "       balance        income  default_No  default_Yes  student_No  student_Yes\n",
-       "0   729.526495  44361.625074        True        False        True        False\n",
-       "1   817.180407  12106.134700        True        False       False         True\n",
-       "2  1073.549164  31767.138947        True        False        True        False\n",
-       "3   529.250605  35704.493935        True        False        True        False\n",
-       "4   785.655883  38463.495879        True        False        True        False"
+       "       balance        income  default_Yes  student_Yes\n",
+       "0   729.526495  44361.625074        False        False\n",
+       "1   817.180407  12106.134700        False         True\n",
+       "2  1073.549164  31767.138947        False        False\n",
+       "3   529.250605  35704.493935        False        False\n",
+       "4   785.655883  38463.495879        False        False"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.get_dummies(df, columns = [\"default\", \"student\"])\n",
+    "df = pd.get_dummies(df, columns = [\"default\", \"student\"], drop_first=True)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "14261c68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>balance</th>\n",
+       "      <th>income</th>\n",
+       "      <th>default_Yes</th>\n",
+       "      <th>student_Yes</th>\n",
+       "      <th>default_yes</th>\n",
+       "      <th>student_yes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>729.526495</td>\n",
+       "      <td>44361.625074</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>817.180407</td>\n",
+       "      <td>12106.134700</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1073.549164</td>\n",
+       "      <td>31767.138947</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>529.250605</td>\n",
+       "      <td>35704.493935</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>785.655883</td>\n",
+       "      <td>38463.495879</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       balance        income  default_Yes  student_Yes  default_yes  \\\n",
+       "0   729.526495  44361.625074        False        False            0   \n",
+       "1   817.180407  12106.134700        False         True            0   \n",
+       "2  1073.549164  31767.138947        False        False            0   \n",
+       "3   529.250605  35704.493935        False        False            0   \n",
+       "4   785.655883  38463.495879        False        False            0   \n",
+       "\n",
+       "   student_yes  \n",
+       "0            0  \n",
+       "1            1  \n",
+       "2            0  \n",
+       "3            0  \n",
+       "4            0  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"default_yes\", \"student_yes\"]] = df[[\"default_Yes\", \"student_Yes\"]].astype(int)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaafeca0",
+   "metadata": {},
+   "source": [
+    "## Logistic regression "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "7ea9ca99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\linus\\Documents\\github\\machine_learning_linus_larsson_mlops25\\.venv\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1135: FutureWarning: 'penalty' was deprecated in version 1.8 and will be removed in 1.10. To avoid this warning, leave 'penalty' set to its default value and use 'l1_ratio' or 'C' instead. Use l1_ratio=0 instead of penalty='l2', l1_ratio=1 instead of penalty='l1', and C=np.inf instead of penalty=None.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 7.86971188e-02, -5.65793128e-03, -2.23231973e-03,\n",
+       "          3.32573972e+00, -2.23231973e-03]]),\n",
+       " array([-8.69049259]))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "X,y = df.drop(\"default_Yes\", axis=1), df[\"default_Yes\"]\n",
+    "X_train, X_test, y_train, y_test, = train_test_split(X, y, test_size=0.33 , random_state=42)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "scaled_X_train = scaler.fit_transform(X_train)\n",
+    "scaled_X_test = scaler.transform(X_test)\n",
+    "\n",
+    "model = LogisticRegression(penalty=None)\n",
+    "model.fit(scaled_X_train, y_train)\n",
+    "model.coef_, model.intercept_"
    ]
   }
  ],
